# utahjs-2023-bazel

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README  README.md  WORKSPACE.bazel  docker-compose.yml  env.example  pnpm-lock.yaml  pnpm-workspace.yaml
data/: BUILD.bazel  knexfile.js  package.json  queries.ts
data/migrations/: 20230909210906_create_chores_table.js
frontend/: BUILD.bazel  add_chore.tsx  app.tsx  chore_list.tsx  client.ts  custom.css  header.tsx  index.html  index.tsx  package.json  tailwind.config.js  tsconfig.json
schema/: BUILD.bazel  chores.proto  chores_connect.d.ts  chores_pb.d.ts  package.json
server/: .swcrc  BUILD.bazel  connect.ts  package.json  server.ts  tsconfig.json
