load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

###
# Defines a proto library that can be used by other languages
###
proto_library(
    name = "chores_proto",
    srcs = ["chores.proto"],
    visibility = ["//visibility:public"],
)

###
# Creates typescript client libraries for the protobufs
###
ts_proto_library(
    name = "ts",
    copy_files = True,
    node_modules = ":node_modules",
    proto = ":chores_proto",
    visibility = ["//visibility:public"],
)
